# app/serializers/feed_serializer.rb
@@ -1,7 +1,24 @@
-# frozen_string_literal: true
-
 class FeedSerializer < Panko::Serializer
-  attributes :id, :title, :content, :created_at, :updated_at
+  attributes :user_info, :feed_posts
 
-  has_one :author, serializer: UserSerializer
+  def user_info
+    {
+      followers_count: object[:user_info][:followers_count],
+      following_count: object[:user_info][:following_count]
+    }
+  end
+
+  def feed_posts
+    object[:feed_posts].map do |post|
+      {
+        id: post.id,
+        content: post.content,
+        author: {
+          id: post.author.id,
+          username: post.author.username
+        },
+        created_at: post.created_at
+      }
+    end
+  end
 end
